# uav_reconstruction_project

./: .gitignore  README.md  main.py  pyproject.toml
config/: video_sampler.yaml
docs/: CHANGELOG.md  SRT集成说明.md
video_sampler/: __init__.py  blur_filter.py  config.py  exif_writer.py  extract_frames.py  parallax_filter.py  srt_parser.py  video_io.py
