[project]
name = "colmap-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av>=16.1.0",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "pyyaml>=6.0.2",
    "pycolmap>=3.13.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "click>=8.3.1",
    "piexif>=1.1.3",
]
